--- a/ServiceA/appsettings.json
+++ b/ServiceA/appsettings.json
@@ -5,9 +5,12 @@
     }
   },
   "AllowedHosts": "*",
-  "ServiceName": "ServiceA",
-  "ServiceIP": "192.168.124.8",
-  "ServicePort": 8000,
-  "ServiceHealthCheck": "http://192.168.124.8:8000/healthCheck",
-  "ConsulAddress": "http://192.168.124.8:5500"
+  "Id": 1,
+  "Consul": {
+    "ServiceName": "service-a",
+    "ServiceIP": "192.168.124.11",
+    "ServicePort": 8000,
+    "ServiceHealthCheck": "http://192.168.124.11:8000/healthCheck",
+    "Address": "http://192.168.124.9:8500"
+  }
 }
