--- a/ServiceB/appsettings.json
+++ b/ServiceB/appsettings.json
@@ -5,9 +5,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ServiceName": "ServiceB",
-  "ServiceIP": "192.168.124.8",
-  "ServicePort": 9000,
-  "ServiceHealthCheck": "http://192.168.124.8:9000/healthCheck",
-  "ConsulAddress": "http://192.168.124.8:5500"
+  "Consul": {
+    "ServiceName": "service-b",
+    "ServiceIP": "192.168.124.11",
+    "ServicePort": 9000,
+    "ServiceHealthCheck": "http://192.168.124.11:9000/healthCheck",
+    "Address": "http://192.168.124.9:8500"
+  }
 }
