--- a/Gateway/configuration.json
+++ b/Gateway/configuration.json
@@ -23,22 +23,22 @@
       //  }
       //],
       "UpstreamPathTemplate": "/servicea/{url}",
-      "UpstreamHttpMethod": [ "Get", "Post", "Put", "Delete" ],
+      "UpstreamHttpMethod": [ "Get" ],
       "LoadBalancerOptions": {
         "Type": "RoundRobin"
+      },
+      "RateLimitOptions": {
+        "ClientWhitelist": [], // 白名单，不受限流控制
+        "EnableRateLimiting": true, // 开启限流
+        "Period": "5s", // 指定时间段内（s,m,h,d）
+        "PeriodTimespan": 5, // 超过限制次数后需等待的时间（秒）
+        "Limit": 5 // 在 Period 时间段内最大访问数次数
+      },
+      "QoSOptions": { // Install-Package Ocelot.Provider.Polly
+        "ExceptionsAllowedBeforeBreaking": 3, // 连续异常次数
+        "DurationOfBreak": 5000, // 熔断时间
+        "TimeoutValue": 5000 // 超时时间
       }
-      //"RateLimitOptions": {
-      //  "ClientWhitelist": [], // 白名单，不受限流控制
-      //  "EnableRateLimiting": true, // 开启限流
-      //  "Period": "5s", // 指定时间段内（s,m,h,d）
-      //  "PeriodTimespan": 3, // 超过限制次数后需等待的时间（秒）
-      //  "Limit": 300 // 在 Period 时间段内最大允许访问数
-      //},
-      //"QoSOptions": { // Install-Package Ocelot.Provider.Polly
-      //  "ExceptionsAllowedBeforeBreaking": 3, // 连续异常次数
-      //  "DurationOfBreak": 5000, // 熔断时间
-      //  "TimeoutValue": 5000 // 超时时间
-      //},
       //"FileCacheOptions": { // Install-Package Ocelot.Cache.CacheManager
       //  "TtlSeconds": 15,
       //  "Region": "servicea"
